--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="https://via.placeholder.com/100" alt="Profile Photo">
+            <img src="https://i.postimg.cc/sgzTcxQp/f8-BRV4-XMBr0olk-AAAAASUVORK5-CYII-600-600-1.jpg" alt="Profile Photo">
             <div>
                 <h1>ARIF HUSSAIN</h1>
                 <div class="contact-info">
